--- a/Portafolio Udemi/assets/css/_responsive.scss
+++ b/Portafolio Udemi/assets/css/_responsive.scss
@@ -35,14 +35,25 @@
     width: 100%;
   }
 
-  .projects__container {
-    flex-direction: column;
-    align-items: center;
-  }
+   .projects__container {
+     flex-direction: column;
+     align-items: center;
+   }
 
-  .projects__item {
-    width: 25rem;
-  }
+   .projects__item {
+     width: 100%;
+     max-width: 50rem;
+
+     .item__container {
+       flex-direction: column;
+       gap: 1rem;
+     }
+
+     .item__inner {
+       width: 100%;
+       height: 20rem;
+     }
+   }
 
   .studies__item {
     flex-direction: column;
