--- a/Portafolio Udemi/assets/css/styles.css
+++ b/Portafolio Udemi/assets/css/styles.css
@@ -490,15 +490,19 @@ input:checked + .layout__aside .aside__buttons .buttons__switch .switch__slider 
 .projects__item {
   background-color: transparent;
   padding: 20px;
-  width: 30rem;
-  height: 40rem;
+  width: 100%;
+  max-width: 60rem;
   perspective: 1000px;
 }
-
-.item__inner {
+.projects__item .item__container {
+  display: flex;
+  gap: 2rem;
+  align-items: center;
+}
+.projects__item .item__inner {
   position: relative;
-  width: 100%;
-  height: 100%;
+  width: 30rem;
+  height: 20rem;
   border-radius: 1rem;
   background: var(--secundary-bg);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -506,9 +510,12 @@ input:checked + .layout__aside .aside__buttons .buttons__switch .switch__slider 
   transition: transform 0.8s;
   transform-style: preserve-3d;
 }
-
 .projects__item:hover .item__inner {
   transform: rotateY(180deg);
+}
+.projects__item .item__details {
+  flex: 1;
+  text-align: left;
 }
 
 .item__front,
@@ -788,7 +795,16 @@ footer {
     align-items: center;
   }
   .projects__item {
-    width: 25rem;
+    width: 100%;
+    max-width: 50rem;
+  }
+  .projects__item .item__container {
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .projects__item .item__inner {
+    width: 100%;
+    height: 20rem;
   }
   .studies__item {
     flex-direction: column;
@@ -1264,7 +1280,7 @@ input:checked + .layout__aside .aside__buttons .buttons__switch .switch__slider 
   perspective: 1000px;
 }
 
-.item__inner {
+.item__card {
   position: relative;
   width: 100%;
   height: 100%;
@@ -1276,7 +1292,7 @@ input:checked + .layout__aside .aside__buttons .buttons__switch .switch__slider 
   transform-style: preserve-3d;
 }
 
-.projects__item:hover .item__inner {
+.projects__item:hover .item__card {
   transform: rotateY(180deg);
 }
 
