--- a/Portafolio Udemi/assets/css/styles.scss
+++ b/Portafolio Udemi/assets/css/styles.scss
@@ -413,7 +413,7 @@ h1 {
   perspective: 1000px;
 }
 
-.item__inner {
+.item__card {
   position: relative;
   width: 100%;
   height: 100%;
@@ -424,7 +424,7 @@ h1 {
   transform-style: preserve-3d;
 }
 
-.projects__item:hover .item__inner {
+.projects__item:hover .item__card {
   transform: rotateY(180deg);
 }
 
