--- a/Portafolio Udemi/assets/css/styles.css
+++ b/Portafolio Udemi/assets/css/styles.css
@@ -496,10 +496,11 @@ input:checked + .layout__aside .aside__buttons .buttons__switch .switch__slider 
 }
 .projects__item .item__container {
   display: flex;
+  flex-direction: row-reverse;
   gap: 2rem;
   align-items: center;
 }
-.projects__item .item__inner {
+.projects__item .item__card {
   position: relative;
   width: 30rem;
   height: 20rem;
@@ -510,7 +511,7 @@ input:checked + .layout__aside .aside__buttons .buttons__switch .switch__slider 
   transition: transform 0.8s;
   transform-style: preserve-3d;
 }
-.projects__item:hover .item__inner {
+.projects__item:hover .item__card {
   transform: rotateY(180deg);
 }
 .projects__item .item__details {
@@ -802,7 +803,7 @@ footer {
     flex-direction: column;
     gap: 1rem;
   }
-  .projects__item .item__inner {
+  .projects__item .item__card {
     width: 100%;
     height: 20rem;
   }
