--- a/Portafolio Udemi/assets/css/styles.scss
+++ b/Portafolio Udemi/assets/css/styles.scss
@@ -402,15 +402,19 @@ h1 {
 }
 
 .projects__container {
-  @include flex-box($direction: row, $justify: center, $align-items: center, $gap: 2rem);
+  margin-top: 8rem;
+  @include flex-box($direction: column, $justify: center, $align-items: center);
 }
 
 .projects__item {
   background-color: transparent;
-  padding: 20px;
-  width: 30rem;
-  height: 40rem;
+  width: 70rem;
+  height: 70rem;
+}
+
+.item__container {
   perspective: 1000px;
+  @include flex-box
 }
 
 .item__card {
@@ -435,7 +439,6 @@ h1 {
   @include flex-box($direction: column, $justify: center);
   width: 100%;
   height: 100%;
-  padding: 20px;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   border-radius: 1rem;
@@ -446,10 +449,10 @@ h1 {
 }
 
 .item__title {
-  font-size: 1rem;
+  font-size: 1.5rem;
 }
 
-.item__img{
+.item__img {
   width: 100%;
   height: 100%;
   border-radius: 0 3rem 0 0;
@@ -458,21 +461,22 @@ h1 {
 .item__text {
   font-size: 1rem;
   margin-top: 1rem;
+  height: fit-content;
+  width: 30rem;
 }
 
 .projects__skill {
-  @include flex-box ($direction: row, $justify: center, $align-items: center, $gap: 0.5rem);
-  margin-top: 3rem;
+  @include flex-box ($direction: row, $justify: center, $align-items: center, $gap: 1rem);
+  margin-top: 1rem;
 }
 
 .skill__item {
   @include flex-box ($direction: row, $justify: center, $align-items: center, $gap: 0.5rem);
-  font-size: 1.5rem;
+  font-size: 2rem;
   text-align: center;
-  height: 4.5rem;
-  width: 4.5rem;
+  height: 2rem;
+  width: 2rem;
   border-radius: 100%;
-  @include card-style($bg-color: #e8e8e8);
 }
 
 /* Studies Section */
