--- a/Portafolio Udemi/assets/css/commonComponents.css
+++ b/Portafolio Udemi/assets/css/commonComponents.css
@@ -46,7 +46,8 @@
   border-radius: 0.5rem;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  box-shadow: var(--box-shadow-up);
+  box-shadow: 6px 6px 12px #c5c5c5, -6px -6px 12px #ffffff;
+  
 }
 
 .btn:hover {
@@ -57,6 +58,7 @@
   background-color: var(--accent-color);
   color: var(--text-color2);
 }
+
 .secondaryBtn {
   background-color: var(--accent-color2);
   color: var(--text-color2);
