--- a/Portafolio Udemi/assets/css/light.css
+++ b/Portafolio Udemi/assets/css/light.css
@@ -1,14 +1,40 @@
-/* Light theme variables */
-:root {
-  --primary-bg: #E0E5EC;
-  --secundary-bg: #F0DDE2;
-  --accent-color: #F47F9B;
-  --accent-color2: #555555;
-  --text-color: #333333;
-  --text-color2: #FFFFFF;
-  --highlight-color: #D1ECEF;
-  --highlight-color2: #E96E8A;
-  --shadow-light: #E0E0E0;
-  --shadow-dark: #C0C0C0;
-  --white-shadow: #FFFFFF;
-}
+ /* CSS Custom Properties for theming */
+ :root {
+   --primary-bg: #e8e8e8;
+   /* Fondo general, inputs y botones */
+   --secundary-bg: #cfcaea;
+   /* Fondo de tarjetas de skills */
+   --accent-color: #f7c548;
+   /* Amarillo para títulos y CTA */
+   --accent-color2: #5e4ac7;
+   /* Azul oscuro para nav y CTA */
+   --text-color: #333333;
+   /* Gris oscuro para body y footer */
+   --text-color2: rgb(255, 253, 253);
+   /* Texto blanco en CTA */
+   --highlight-color: #cfcaea;
+   /* Color claro del slider */
+   --highlight-color2: #6f57e9;
+   /* Color oscuro del slider */
+   --linear-gradient: 270deg, var(--highlight-color2), var(--background-gradient-secondary)
+   --shadow-light: #c1c6ce;
+   --shadow-dark: #9da1a7;
+   --white-shadow: #ffffff;
+
+   --box-shadow-main: 2px 2px 2px var(--shadow-light), -2px -2px 2px var(--text-color2), 1px 1px 70px var(--shadow-dark);
+   --box-shadow-inset: inset 10px 10px 10px var(--shadow-light), inset -10px -10px 10px var(--text-color2);
+   --box-shadow-press: rgb(193, 198, 206) 2px 2px 2px inset, rgb(255, 255, 255) -2px -2px 5px inset, rgb(193, 198, 206) 0.5px 0.5px 5px inset, rgb(255, 255, 255) -0.5px -0.5px 3px inset;
+   --box-shadow-up: 2px 2px 5px var(--shadow-light), -2px -2px 5px var(--text-color2), 0.5px 0.5px 2px var(--shadow-dark), -0.5px -0.5px 2px var(--text-color2);
+   --box-shadow-inset-box: -10px -10px 30px rgba(255, 255, 255, 0.9), 10px 10px 30px rgba(157, 161, 167, 0.4), inset -10px -10px 30px rgba(157, 161, 167, 0.25), inset 10px 10px 30px rgba(255, 255, 255, 0.9);
+
+   --background-gradient-secondary: #beb1fb;
+   --menu-link-active-bg: #EBE6E2;
+   --icon-circle-bg: #e8e8e8;
+   --icon-circle-shadow-light: #c5c5c5;
+   --icon-circle-shadow-dark: #ffffff;
+   --switch-slider-shadow-light: #c1c6ce;
+   --switch-slider-shadow-dark: #ffffff;
+ }
+
+ /* SCSS Variables */
+ /*# sourceMappingURL=variables.css.map */
