--- a/Portafolio Udemi/assets/css/styles.css
+++ b/Portafolio Udemi/assets/css/styles.css
@@ -45,7 +45,6 @@ h1 {
 /* Layout styles */
 .layout {
     position: relative;
-    min-width: 1290px;
     width: 85%;
     height: 85vh;
     min-height: 85vh;
@@ -162,7 +161,7 @@ h1 {
     justify-content: center;
     align-items: center;
     padding: 5rem;
-    width: 80%;
+    max-width: 80%;
 }
 
 .page__text {
@@ -441,6 +440,7 @@ input:checked+.skills__slider::before {
 }
 
 /* projectTemplate */
+
 .project__page {
     display: flex;
     flex-direction: column;
@@ -559,7 +559,7 @@ input:checked+.skills__slider::before {
 }
 
 .studies__content {
-    max-width: 600rem;
+    max-width: 60rem;
 }
 
 .studies__title {
