--- a/Portafolio Udemi/assets/css/styles.css
+++ b/Portafolio Udemi/assets/css/styles.css
@@ -157,12 +157,6 @@ h1 {
 /* Hero Section */
 .content__page {
   height: 100%;
-  max-width: 80%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 5rem;
 }
 
 .content__hero {
@@ -202,9 +196,11 @@ h1 {
 /* Skills Section */
 .content__skills {
   height: 100%;
-  min-height: 100%;
-  display: flex;
-  flex-direction: column;
+}
+
+.content__studies {
+  height: 100%;
+  overflow-y: hidden;
 }
 
 .skills__textContent {
@@ -391,56 +387,109 @@ input:checked+.skills__slider::before {
 }
 
 /* Tarjeta */
-.projects__item {
+.content__projects{
   height: 100%;
   flex: 1;
   display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   font-weight: 600;
   transition: flex 0.1s linear;
+  position: relative;
 }
 
-.projects__item:hover {
-  flex: 2;
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+.projects__card {
+  transition: flex 0.1s linear;
 }
 
 /* Imagen superior */
-.item__card {
+.card__item {
+  width: 40rem;
+  height: 50rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; 
+  align-items: center; 
+  border-radius: 20px;
+  background: #f5f5f5;
   position: relative;
-  width: 100%;
-  height: 18rem;
-  overflow: hidden;
+  padding: 1.8rem;
+  border: 2px solid #c3c6ce;
+  transition: 0.5s ease-out;
+  overflow: visible;
 }
 
-.item__img {
+.card__img {
   width: 100%;
-  height: 100%;
+  height: 80%;
   object-fit: cover;
+  transition: opacity 0.3s ease;
 }
 
 /* Contenido de la tarjeta */
-.item__details {
-  padding: 1.6rem;
+.card__details {
+  height: 100%;
+  gap: .5em;
+  display: grid;
+  place-content: center;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 5%;
+  bottom: 0;
+  transition: opacity 0.3s ease;
+}
+
+.card__buttons {
+  transform: translate(-50%, 125%);
   display: flex;
-  flex-direction: column;
-  gap: 0.8rem;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  width: 60%;
+  border: none;
+  font-size: 1rem;
+  padding: .5rem 1rem;
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  opacity: 0;
+  transition: 0.3s ease-out;
 }
 
 /* Título y descripción */
-.item__title {
+.card__title {
   font-size: 1.6rem;
   font-weight: 600;
   color: #222;
   margin-bottom: 0.5rem;
 }
 
-.item__text {
+.card__text {
   font-size: 1.3rem;
   color: #555;
   line-height: 1.4;
   flex: 1;
+}
+
+.card__item:hover {
+  border-color: #008bf8;
+  box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.25);
+}
+
+.card__item:hover .card__img {
+  filter: blur(10px);
+  transition: opacity 0.3s ease;
+}
+
+.card__item:hover .card__details {
+  opacity: 1;
+}
+
+.card__item:hover .card__buttons {
+  transform: translate(-50%, 50%);
+  opacity: 1;
 }
 
 /* projectTemplate */
@@ -539,8 +588,8 @@ input:checked+.skills__slider::before {
 
 .studies__list {
   list-style: none;
-  overflow-y: hidden;
   overflow-x: auto;
+  overflow-y: hidden;
   position: relative;
   margin: 0;
   display: flex;
