--- a/Portafolio Udemi/assets/css/styles.css
+++ b/Portafolio Udemi/assets/css/styles.css
@@ -499,7 +499,7 @@ input:checked+.skills__slider::before {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 5rem;
+  padding: 2rem;
 }
 
 .back__link {
@@ -509,15 +509,20 @@ input:checked+.skills__slider::before {
 .project__header {
   display: flex;
   justify-content: start;
-  align-items: center;
   gap: 3rem;
 }
 
 .header__gallery {
   background-color: var(--accent-color2);
   box-shadow: var(--box-shadow-main);
-  width: 30rem;
+  width: 50rem;
   height: 30rem;
+  margin-top: 11rem;
+}
+
+.project__description {
+  max-width: 50rem;
+  margin-bottom: 2rem;
 }
 
 .header__text {
@@ -532,7 +537,7 @@ input:checked+.skills__slider::before {
   display: flex;
   align-items: center;
   gap: 3rem;
-  margin-top: 20rem;
+  margin-top: 5rem;
 }
 
 .project__text {
@@ -547,8 +552,34 @@ input:checked+.skills__slider::before {
   height: 100%;
 }
 
-.project__left {
-  margin-top: 18rem;
+.project__content {
+  background-color: white;
+  margin-top: -12rem;
+  z-index: -2;
+  padding: 5rem;
+}
+
+.features__grid{
+  display: flex;
+  direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 5rem;
+  margin: 4rem 0 4rem 0;
+}
+
+.feature__gif{
+  background-color: var(--secundary-bg);
+  padding: 1rem;
+  border-radius: 10px;
+  box-shadow: var(--box-shadow-up);
+  width: 100%;
+  height: 40rem;
+}
+
+.learning__grid {
+  margin-top: 2rem;
+  display: flex;
 }
 
 /* Skills / logos */
